// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildModel — exemples du dépôt > acceptance-01-quart-tournant.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 120,
  "colletsChord": [
    120,
    120,
    120,
    171.1,
    121.9,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1780,
    "nosing": 3,
  },
  "n": 15,
  "parts": 29,
  "run": 3360.3,
  "treads": "wwwwwsssssssss",
  "violations": {
    "avertissement": 1,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "0-4 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > demo-erp-grand.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630.02,
  "colletMin": null,
  "colletsChord": [],
  "firstRise": 158.82,
  "g": 312.38,
  "h": 158.82,
  "headroom": 1903.9,
  "headroomWidth": {
    "min": 2023.5,
    "nosing": 2,
  },
  "n": 17,
  "parts": 109,
  "run": 4998,
  "treads": "ssssssssssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 4,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > demo-half-turn-industrial.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.97,
  "colletMin": 113.3,
  "colletsChord": [
    174,
    121.5,
    162.7,
    153,
    113.3,
    156.9,
    170.9,
    129.4,
    181.5,
  ],
  "firstRise": 180,
  "g": 269.97,
  "h": 180,
  "headroom": null,
  "headroomWidth": null,
  "n": 15,
  "parts": 209,
  "run": 3779.6,
  "treads": "sswwwwwwwwwsss",
  "violations": {
    "avertissement": 12,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "2-5 M3-cubic",
    "5-8 M3-cubic",
    "8-11 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > demo-helical-glass.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 588.79,
  "colletMin": 29.1,
  "colletsChord": [
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
    29.1,
  ],
  "firstRise": 171.88,
  "g": 245.04,
  "h": 171.88,
  "headroom": 1925.2,
  "headroomWidth": {
    "min": 1862.5,
    "nosing": 3,
  },
  "n": 16,
  "parts": 45,
  "run": 3675.7,
  "treads": "wwwwwwwwwwwwwww",
  "violations": {
    "avertissement": 2,
    "bloquant": 0,
    "conseil": 2,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > demo-helical-well.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 648.09,
  "colletMin": 136.6,
  "colletsChord": [
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
    136.6,
  ],
  "firstRise": 171.88,
  "g": 304.34,
  "h": 171.88,
  "headroom": 1982.5,
  "headroomWidth": {
    "min": 1982.5,
    "nosing": 3,
  },
  "n": 16,
  "parts": 54,
  "run": 4565.1,
  "treads": "wwwwwwwwwwwwwww",
  "violations": {
    "avertissement": 1,
    "bloquant": 0,
    "conseil": 2,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > demo-quarter-curved.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 604.97,
  "colletMin": 108,
  "colletsChord": [
    190.3,
    126.1,
    110.1,
    108,
    117.4,
    143.6,
    209.1,
  ],
  "firstRise": 180,
  "g": 244.97,
  "h": 180,
  "headroom": 1901.2,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 102,
  "run": 3429.6,
  "treads": "sswwwwwwwsssss",
  "violations": {
    "avertissement": 1,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "3-9 M3-quintic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > demo-quarter-landing-ash.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630,
  "colletMin": null,
  "colletsChord": [],
  "firstRise": 180,
  "g": 270,
  "h": 180,
  "headroom": 1960,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 72,
  "run": 4216.9,
  "treads": "sslsssssssssss",
  "violations": {
    "avertissement": 3,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > demo-straight-loft.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630,
  "colletMin": null,
  "colletsChord": [],
  "firstRise": 180,
  "g": 270,
  "h": 180,
  "headroom": 1900,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 80,
  "run": 3780,
  "treads": "ssssssssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 16,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > demo-u-oak.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630.01,
  "colletMin": 100,
  "colletsChord": [
    158.2,
    156.9,
    154.5,
    100,
    100,
    147.9,
    170.7,
    128.3,
    180.5,
  ],
  "firstRise": 180,
  "g": 270.01,
  "h": 180,
  "headroom": null,
  "headroomWidth": null,
  "n": 15,
  "parts": 171,
  "run": 3780.2,
  "treads": "swwwwwwwwwssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "1-3 M3-cubic",
    "3-7 M3-cubic",
    "7-10 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > half-turn.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.97,
  "colletMin": 117.9,
  "colletsChord": [
    215.4,
    165.7,
    145.6,
    135.3,
    117.9,
    123,
    130.2,
    135.3,
    145.6,
    165.7,
    215.4,
  ],
  "firstRise": 180,
  "g": 269.97,
  "h": 180,
  "headroom": null,
  "headroomWidth": null,
  "n": 15,
  "parts": 29,
  "run": 3779.6,
  "treads": "swwwwwwwwwwwss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "1-12 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j3a-acceptance-01-bois.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 120,
  "colletsChord": [
    120,
    120,
    120,
    171.1,
    121.9,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1780,
    "nosing": 3,
  },
  "n": 15,
  "parts": 34,
  "run": 3360.3,
  "treads": "wwwwwsssssssss",
  "violations": {
    "avertissement": 1,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "0-4 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j3b-acceptance-01-acier-plat.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 120,
  "colletsChord": [
    120,
    120,
    120,
    171.1,
    121.9,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1780,
    "nosing": 3,
  },
  "n": 15,
  "parts": 67,
  "run": 3360.3,
  "treads": "wwwwwsssssssss",
  "violations": {
    "avertissement": 7,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "0-4 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j3b-acceptance-01-tole-pliee.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 120,
  "colletsChord": [
    120,
    120,
    120,
    171.1,
    121.9,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1780,
    "nosing": 3,
  },
  "n": 15,
  "parts": 49,
  "run": 3360.3,
  "treads": "wwwwwsssssssss",
  "violations": {
    "avertissement": 11,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "0-4 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j3c-acceptance-01-upn.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 111.4,
  "colletsChord": [
    111.4,
    113.8,
    119.1,
    155.5,
    151.5,
    191.6,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1780,
    "nosing": 3,
  },
  "n": 15,
  "parts": 62,
  "run": 3360.3,
  "treads": "wwwwwwssssssss",
  "violations": {
    "avertissement": 6,
    "bloquant": 0,
    "conseil": 3,
  },
  "zones": [
    "0-6 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j4-acceptance-01-garde-corps.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 120,
  "colletsChord": [
    120,
    120,
    120,
    171.1,
    121.9,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1780,
    "nosing": 3,
  },
  "n": 15,
  "parts": 88,
  "run": 3360.3,
  "treads": "wwwwwsssssssss",
  "violations": {
    "avertissement": 1,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "0-4 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j4-demi-tournant-acier-garde-corps.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.97,
  "colletMin": 113.3,
  "colletsChord": [
    174,
    121.5,
    162.7,
    153,
    113.3,
    156.9,
    170.9,
    129.4,
    181.5,
  ],
  "firstRise": 180,
  "g": 269.97,
  "h": 180,
  "headroom": null,
  "headroomWidth": null,
  "n": 15,
  "parts": 182,
  "run": 3779.6,
  "treads": "sswwwwwwwwwsss",
  "violations": {
    "avertissement": 12,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "2-5 M3-cubic",
    "5-8 M3-cubic",
    "8-11 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j5a-helicoidal.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 590.24,
  "colletMin": 33.5,
  "colletsChord": [
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
    33.5,
  ],
  "firstRise": 171.88,
  "g": 246.49,
  "h": 171.88,
  "headroom": 1915.1,
  "headroomWidth": {
    "min": 1862.5,
    "nosing": 3,
  },
  "n": 16,
  "parts": 19,
  "run": 3697.4,
  "treads": "wwwwwwwwwwwwwww",
  "violations": {
    "avertissement": 3,
    "bloquant": 0,
    "conseil": 17,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > j5b-debillarde-soude.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 604.97,
  "colletMin": 108,
  "colletsChord": [
    190.3,
    126.1,
    110.1,
    108,
    117.4,
    143.6,
    209.1,
  ],
  "firstRise": 180,
  "g": 244.97,
  "h": 180,
  "headroom": 2136.3,
  "headroomWidth": {
    "min": 2140,
    "nosing": 1,
  },
  "n": 15,
  "parts": 66,
  "run": 3429.6,
  "treads": "sswwwwwwwsssss",
  "violations": {
    "avertissement": 1,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "3-9 M3-quintic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > quarter-landing.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630,
  "colletMin": null,
  "colletsChord": [],
  "firstRise": 180,
  "g": 270,
  "h": 180,
  "headroom": 1960,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 4216.9,
  "treads": "sslsssssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > quarter-left.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.99,
  "colletMin": 102.5,
  "colletsChord": [
    160.2,
    109.8,
    102.5,
    110.1,
    160.2,
  ],
  "firstRise": 180,
  "g": 269.99,
  "h": 180,
  "headroom": 2026.7,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 3779.9,
  "treads": "swwwwwssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "1-6 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > quarter-right.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.99,
  "colletMin": 102.5,
  "colletsChord": [
    160.2,
    109.8,
    102.5,
    110.1,
    160.2,
  ],
  "firstRise": 180,
  "g": 269.99,
  "h": 180,
  "headroom": 2026.7,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 3779.9,
  "treads": "swwwwwssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "1-6 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > straight.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630,
  "colletMin": null,
  "colletsChord": [],
  "firstRise": 180,
  "g": 270,
  "h": 180,
  "headroom": 1900,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 3780,
  "treads": "ssssssssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > two-quarters-s.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630.01,
  "colletMin": 114.1,
  "colletsChord": [
    144.6,
    140.1,
    132.3,
    123,
    142.5,
    178,
    125.8,
    114.1,
    114.7,
    150,
  ],
  "firstRise": 180,
  "g": 270.01,
  "h": 180,
  "headroom": 2026.7,
  "headroomWidth": {
    "min": 1780,
    "nosing": 3,
  },
  "n": 15,
  "parts": 29,
  "run": 3780.2,
  "treads": "wwwwwswwwwwsss",
  "violations": {
    "avertissement": 1,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "0-4 M3-cubic",
    "6-10 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > two-quarters-u.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630.01,
  "colletMin": 113.7,
  "colletsChord": [
    143.9,
    139.8,
    132.6,
    123.8,
    142.5,
    257.5,
    165.6,
    121.1,
    113.7,
    122.1,
    172.5,
  ],
  "firstRise": 180,
  "g": 270.01,
  "h": 180,
  "headroom": null,
  "headroomWidth": null,
  "n": 15,
  "parts": 29,
  "run": 3780.2,
  "treads": "wwwwwwwwwwwsss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "0-4 M3-cubic",
    "6-11 M3-cubic",
  ],
}
`;
